--- a/app/index.html
+++ b/app/index.html
@@ -10,12 +10,21 @@
   </head>
   <body ng-controller="PhoneListController">
 
+    <p>Hello {{name}}</p>
+
+    <p>Total number of phones: {{phones.length}}</p>
+
     <ul>
       <li ng-repeat="phone in phones">
         <span>{{phone.name}}</span>
         <p>{{phone.snippet}}</p>
       </li>
     </ul>
+
+    <table>
+      <tr><th ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]">{{i + 1}}</th></tr>
+      <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]"><td>{{i + 1}}</td></tr>
+    </table>
 
   </body>
 </html>
