Convert to component
This unifies controller and template into one, making it reusable and have
isolated scope(non-global).

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
 
     <!-- Use a custom component to render a list of phones -->
     <phone-list></phone-list>
+    <phone-list></phone-list>
+    <phone-list></phone-list>
 
   </body>
 </html>
