--- a/app/phone-list/phone-list.template.html
+++ b/app/phone-list/phone-list.template.html
@@ -6,6 +6,7 @@
       Search: <input ng-model="$ctrl.query" />
 
     </div>
+    <p>This is what is in the search box. Angular dynamically updates the DOM: {{$ctrl.query}}</p>
     <div class="col-md-10">
       <!--Body content-->
 
